--- a/index.html
+++ b/index.html
@@ -532,9 +532,10 @@
                    <p>&nbsp;</p>
                    <p>&nbsp;</p>
                    <ol>
-                       <li>Proyecto Nuevos Metaversos</li>
-                       <li><a href="file:///Users/vatican/Documents/master%20humanitats/html/artssassin%20web/proyectoreestetica.html" target="_blank" rel="noopener">Proyecto Re-est&eacute;tica</a></li>
-                       <li><a href="file:///Users/vatican/Documents/master%20humanitats/html/artssassin%20web/proyectohipersticion.html" target="_blank" rel="noopener">Proyecto Hiperstici&oacute;n de Paz</a></li>
+                        <li><a href="#colrevolucion">Coleccion Revolucion Circulos del Arte </a></li>
+                       <li><a href="https://www.artssassin.com/proyectoreestetica.html" target="_blank" rel="noopener">Proyecto Re-est&eacute;tica</a></li>
+                        <li><a href="https://www.artssassin.com/reesteticaempirica.html" target="_blank" rel="noopener"> Reest&eacute;tica Emp&iacute;rica (espa&ntilde;ol)&nbsp; </a> <a href="https://www.artssassin.com/reesteticaempirical.html" target="_blank" rel="noopener">(in english)&nbsp;</a> </li> 
+                       <li><a href="https://www.artssassin.com/proyectohipersticion.html" target="_blank" rel="noopener">Proyecto Hiperstici&oacute;n de Paz</a></li>
                    </ol>
                    
                </article>
